# resonanz-task

./: .gitignore  Dockerfile  README.md  config.py  config_template.json  main.py  pyproject.toml
deploy/: .env  docker-compose.yaml
src/db/: conn.py  model.py  session.py
src/geo/: normalization.py
src/util/: meta.py
src/util/logging/: __init__.py  logger.py
src/web/: app.py  model.py
src/web/static/css/: styles.css
src/web/static/js/: alert.js  insert.js  search.js
src/web/templates/: base.html  index.html  insert.html  search.html
