[tool.poetry]
name = "resonanz-task"
version = "0.1.0"
description = ""
authors = ["Georgi <zkscpqm@daum.net>"]
readme = "README.md"
packages = [{include = "resonanz_task"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
waitress = "^2.1.2"
geopy = "^2.4.1"
googlemaps = "^4.10.0"
termcolor = "^2.4.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
